// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerNotifications renders correctly 1`] = `null`;

exports[`BannerNotifications renders correctly 2`] = `
<div
  className="wds-banner-notification__container "
>
  <div
    className="wds-banner-notification wds-message "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <div
        className="wds-banner-notification__icon-mark"
      />
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a single message
    </span>
    <div
      className="wds-banner-notification__close"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`BannerNotifications renders correctly 3`] = `
<div
  className="wds-banner-notification__container "
>
  <div
    className="wds-banner-notification wds-message "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <div
        className="wds-banner-notification__icon-mark"
      />
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a message
    </span>
    <div
      className="wds-banner-notification__close"
      onClick={[Function]}
    />
  </div>
  <div
    className="wds-banner-notification wds-success "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <div
        className="wds-banner-notification__icon-mark"
      />
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a success
    </span>
    <div
      className="wds-banner-notification__close"
      onClick={[Function]}
    />
  </div>
  <div
    className="wds-banner-notification wds-warning "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <div
        className="wds-banner-notification__icon-mark"
      />
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a warning
    </span>
    <div
      className="wds-banner-notification__close"
      onClick={[Function]}
    />
  </div>
  <div
    className="wds-banner-notification wds-alert "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <div
        className="wds-banner-notification__icon-mark"
      />
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a permanent alert
    </span>
    <div
      className="wds-banner-notification__close"
      onClick={null}
    />
  </div>
</div>
`;
